[package]
name = "steam-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
regex = "1.9.3"
walkdir = "2.3.3"
futures = "0.3"
reqwest = { version = "0.11", features = ["stream","multipart"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { Version = "0.6", features = ["codec"] }
